# devops_standardization

./: .codevector.json  .gitignore  APPLICATION_DOCUMENTATION.docx  APPLICATION_GUIDE.md  DEMO_INTRO.pptx  DEMO_SPEECH.md  README.md  pyproject.toml  scaffold_guide.docx
.claude/: settings.json  settings.local.json
parent-repo/templates/: providers.tf.j2
parent-repo/templates/cicd/: pipeline.yml.j2
parent-repo/templates/iac/: networking.tf.j2  observability.tf.j2  outputs.tf.j2  variables.tf.j2
parent-repo/templates/iac/compute/: alb.tf.j2  api-gateway.tf.j2  autoscaling.tf.j2  ecs-fargate.tf.j2  eks.tf.j2  lambda.tf.j2  static-site.tf.j2
parent-repo/templates/iac/data/: cognito.tf.j2  dynamodb.tf.j2  eventbridge.tf.j2  kms.tf.j2  rds.tf.j2  redis.tf.j2  s3.tf.j2  secrets-manager.tf.j2  sns.tf.j2  sqs.tf.j2
parent-repo/templates/iac/devops/: ecr.tf.j2
parent-repo/templates/iac/iam/: ecs.tf.j2  eks.tf.j2  lambda.tf.j2
parent-repo/templates/iac/observability/: cloudwatch.tf.j2
parent-repo/templates/iac/security/: waf.tf.j2
scaffold-cli/: config_extractor.py  dynamic_generator.py  generator.py  interactive_prompts.py  main.py  pipeline_generator.py  requirements.txt  services_catalog.yaml
scaffold-cli/tests/: test_catalog_coverage.py
testing-ground/: infra.yaml  infra.yaml.example
